--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,8 +61,8 @@ services:
       # # bridge network as the peers
       # # https://docs.docker.com/compose/networking/
       - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=${COMPOSE_PROJECT_NAME}_basic
-#      - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
-#      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb:5984
+      - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb:5984
       # The CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME and CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD
       # provide the credentials for ledger to connect to CouchDB.  The username and password must
       # match the username and password set for the associated CouchDB.
@@ -81,22 +81,22 @@ services:
         - ./config:/etc/hyperledger/configtx
     depends_on:
       - orderer.example.com
-#      - couchdb
+      - couchdb
     networks:
       - basic
 
-#  couchdb:
-#    container_name: couchdb
-#    image: hyperledger/fabric-couchdb
-#    # Populate the COUCHDB_USER and COUCHDB_PASSWORD to set an admin user and password
+  couchdb:
+    container_name: couchdb
+    image: hyperledger/fabric-couchdb
+    # Populate the COUCHDB_USER and COUCHDB_PASSWORD to set an admin user and password
     # for CouchDB.  This will prevent CouchDB from operating in an "Admin Party" mode.
-#    environment:
-#      - COUCHDB_USER=
-#      - COUCHDB_PASSWORD=
-#    ports:
-#      - 5984:5984
-#    networks:
-#      - basic
+    environment:
+      - COUCHDB_USER=
+      - COUCHDB_PASSWORD=
+    ports:
+      - 5984:5984
+    networks:
+      - basic
 
   cli:
     container_name: cli
